This is a summary of the changes in KTIGCC since the first alpha release:

CVS ktigcc-1-branch (2007-02-26):

* Added a full changelog (generated from CVS logs).
* Fixed stray indentation at the end of the line when autoclosing a curly brace
  as ENTER is pressed.
* Fixed highlighting update when moving a file to Header Files from another
  editable category. (The first character was read from the wrong buffer.)


KTIGCC 1.06 (2006-11-25):

* Added Anjuta 2 project, removed Anjuta 1 project.
* Fixed missing layout in the Operating System tab of the Program Options
  dialog.
* Fixed wrong length computations when writing to a file in UTF-8 or other
  multibyte charsets. (This broke debugging information for projects in a path
  containing non-ASCII characters.)
* Added tas to the default Integer Arithmetic instructions.
* Added xdef, globl, altmacro and noaltmacro to the default GNU as directives.
* Ctrl+Tab/Ctrl+G now skips the project root and the categories.
* When saving a project for the first time, if it is still named "Project1", a
  name based on the .tpr file name is now set (as in TIGCC IDE).
* Disabled debugging and informational messages from libti*.


KTIGCC 1.05 (2006-10-24):

* Added missing -lkdeui to link line (needed for OS X).
* Fixed RPM specfile dependency to work on FC6.


KTIGCC 1.04 (2006-09-25):

* Use explicit memset to zero the buffer in loadFileText because the C++ way
  doesn't seem to work on OS X.
* Link all required KDE libraries explicitly instead of relying on the linker
  pulling them in (which the OS X linker doesn't do).
* Use the .ui, .moc and .obj subdirectories on all platforms.
* Don't try to set an rpath on OS X, it is neither supported nor needed.


KTIGCC 1.03 (2006-09-17):

* Don't show symbol info for reserved keywords even in the case of an exact
  match (fixes unhelpful prototype help for "asm").
* Added workaround for rpmbuild 4.4.2 with tar 1.15.91 to make rpm target.


KTIGCC 1.02 (2006-09-05):
