@@ -1,12 +1,13 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
-CVS ktigcc-1-branch (2007-02-26):
+CVS ktigcc-1-branch (2007-03-02):
 
 * Added a full changelog (generated from CVS logs).
 * Fixed stray indentation at the end of the line when autoclosing a curly brace
   as ENTER is pressed.
 * Fixed highlighting update when moving a file to Header Files from another
   editable category. (The first character was read from the wrong buffer.)
+* Don't hardcode ~/.kde for the KDEHOME directory.
 
 
 KTIGCC 1.06 (2006-11-25):
